# LineSfM

./: CMakeLists.txt  README.md  interface.cpp  interface.hpp  main_calibration.cpp  main_detection.cpp  main_edline_matching.cpp  main_line_matching.cpp  main_point_matching.cpp  main_reconstruction.cpp  main_vanishing_point.cpp
CALIBRATION/: hybrid_essential.cpp  hybrid_essential.hpp  miscellaneous.hpp  refinement.cpp  refinement.hpp  scale_uniformization.cpp  scale_uniformization.hpp
DETECTION/: detection.cpp  detection.hpp  lsd.cpp  lsd.hpp  mlsd.cpp  mlsd.hpp
MATCHING/: line_matching.cpp  line_matching.hpp  point_matching.cpp  point_matching.hpp
TEST_IMAGES/: 0000.png.camera  0000_0001_R.txt  0000_0001_t.txt  0001.png.camera  0001_0002_R.txt  0001_0002_t.txt  0002.png.camera  0002_0003_R.txt  0002_0003_t.txt  0003.png.camera  K.txt  README  images.txt  lists.txt
TEST_IMAGES/INDOOR_DATASET/: 20_21_F.txt  20_21_R.txt  20_21_t.txt  21_22_F.txt  21_22_K.txt  21_22_R.txt  21_22_t.txt  22_23_F.txt  22_23_R.txt  22_23_t.txt  23_24_F.txt  23_24_R.txt  23_24_t.txt  24_25_F.txt  24_25_R.txt  24_25_t.txt  25_26_F.txt  25_26_R.txt  25_26_t.txt  26_27_F.txt  26_27_R.txt  26_27_t.txt  27_28_F.txt  27_28_R.txt  27_28_t.txt
TEST_IMAGES/openMVG/: README
TEST_IMAGES/pictures/: README
